Fixed issue with code

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script type="text/javascript">
 
 function main() {
-    document.getElementById('container').style.background = 'rgba('+document.getElementById('inR').value+', '+document.getElementById('inG').value+', '+document.getElementById('inB').value+', 1);'
+    document.getElementById('container').style.background = 'rgba('+document.getElementById('inR').value+', '+document.getElementById('inG').value+', '+document.getElementById('inB').value+', 1)';
 }
 
 </script>
